--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "node": "12.18.0",
     "pug": "~3.0.0",
     "passport": "~0.4.1",
-    "espress-session": "~1.17.1"
+    "express-session": "~1.17.1"
   },
   "repository": {
     "type": "git",
