Advanced Node and Express: Implement the Serialization of a Passport User

--- a/sanchez.env
+++ b/sanchez.env
@@ -1,4 +1,4 @@
 PORT=8080
 NODE_ENV=development
-MONGO_URI=''
+MONGO_URI='mongodb+srv://LuderioSanchez:qwerty123@cluster0.gdjkb.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
 SESSION_SECRET='Luderio'
