--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "node": "12.18.0",
     "pug": "~3.0.0",
     "passport": "~0.4.1",
-    "express-session": "~1.17.1"
+    "express-session": "~1.17.1",
+    "mongoose": "^5.4.0"
   },
   "repository": {
     "type": "git",
