--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pug": "~3.0.0",
     "passport": "~0.4.1",
     "express-session": "~1.17.1",
-    "mongoose": "^5.4.0"
+    "mongoose": "^5.4.0",
+    "passport-local": "^1.0.0"
   },
   "repository": {
     "type": "git",
