Lesson 14: Implementation of Social Authentication

--- a/sanchez.env
+++ b/sanchez.env
@@ -2,3 +2,5 @@ PORT=8080
 NODE_ENV=development
 MONGO_URI='mongodb+srv://LuderioSanchez:qwerty123@cluster0.gdjkb.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
 SESSION_SECRET='Luderio'
+GITHUB_CLIENT_ID='ac5567e2c7796f0a587f'
+GITHUB_CLIENT_SECRET='cb9771a1fac27c92a752eb4ad3075384c13e4435'
