--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express-session": "~1.17.1",
     "mongoose": "^5.4.0",
     "passport-local": "^1.0.0",
-    "bcrypt": "~5.0.0"
+    "bcrypt": "~5.0.0",
+    "passport-github": "~1.1.0"
   },
   "repository": {
     "type": "git",
