--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^5.4.0",
     "passport-local": "^1.0.0",
     "bcrypt": "~5.0.0",
-    "passport-github": "~1.1.0"
+    "passport-github": "~1.1.0",
+    "socket.io": "~2.3.0"
   },
   "repository": {
     "type": "git",
